--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-./poetryFromTang.txt
-./char_rnn_model_complete.pth
-./char_rnn_checkpoint.pth
+poetryFromTang.txt
+char_rnn_model_complete.pth
+char_rnn_checkpoint.pth
